--- a/src/styles/_reveal.css
+++ b/src/styles/_reveal.css
@@ -3,8 +3,8 @@
     --r-main-font-size: 4.5rem;
     --r-heading-color: #f0f0f0;
     --r-heading-text-transform: none;
-    --r-link-color: #AD85D6;
-    --r-highlight-color: #AD85D6;
+    --r-link-color: #ad85d6;
+    --r-highlight-color: #ad85d6;
   }
 
   .reveal {
@@ -26,11 +26,23 @@
     }
 
     blockquote {
-      padding: 1rem 0;
+      padding: 1.5rem;
+      margin-inline: auto;
+
+      font-size: 1.25em;
+      text-align: left;
+
+      &::before {
+        content: '“';
+      }
+
+      &::after {
+        content: '”';
+      }
     }
 
     li + li {
-      margin-block-start: 1.5rem;
+      margin-block-start: 2rem;
     }
 
     small {
@@ -38,14 +50,12 @@
     }
 
     pre {
+      width: 95%;
+
       code {
-        font-size: 0.7em;
+        font-size: 0.8em;
         line-height: 1.3;
       }
     }
-  }
-
-  .hljs-ln td {
-    padding: 0 0 0 1rem !important;
   }
 }
