--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,6 +12,20 @@
 @import './_comparison.css' layer(talk);
 @import './_pixu.css' layer(talk);
 @import './intro/index.css' layer(talk);
+@import './_cascade.css' layer(talk);
 /* here goes the style of the talk slides */
 @import './outro/index.css' layer(talk);
+
+[brand] {
+  position: fixed;
+  inset: auto auto 3rem 3rem;
+  
+  img {
+    inline-size: 10rem;
+    aspect-ratio: 1;
+    
+    border: 2px rebeccapurple;
+    border-radius: 2.5rem;
+  }
+}
 
