--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,18 +1,21 @@
 @import 'npm:@pixu-talks/fonts';
 @import 'npm:@pixu-talks/theme';
 
-@import './_cascade.css' layer(talk);
+@import './_cascade.css' layer(pixu-talk);
 
-[brand] {
-  position: fixed;
-  inset: auto auto 3rem 3rem;
-  
-  img {
-    inline-size: 10rem;
-    aspect-ratio: 1;
-    
-    border: 2px rebeccapurple;
-    border-radius: 2.5rem;
+@layer pixu-talk {
+  @layer brand {
+    [brand] {
+      position: fixed;
+      inset: auto auto 3rem 3rem;
+
+      img {
+        inline-size: 15rem;
+        aspect-ratio: 1;
+
+        border: 2px rebeccapurple;
+        border-radius: 2rem;
+      }
+    }
   }
 }
-
